syntax = "proto3";

package pb;

import "complaint.proto";

option go_package = "Backend/pb";

message CreateComplaintRequest {
    int32 UserID = 1;
    int32 CpTargetID = 2;
    string CpType = 3;
    string CpMessage = 4;
}
message CreateComplaintResponse {
    Complaint cp = 1;
}

message GetComplaintRequest {
    int32 CpID = 1;
}
message GetComplaintResponse {
    Complaint cp = 1;
}

message UpdateComplaintRequest {
    int32 CpID = 1;
    string Status = 2;
}
message UpdateComplaintResponse {
    Complaint cp = 1;
}